test/users/weili/raiseType3-blc2.good
raiseType3-blc2.chpl:1: In function 'raiseType':
raiseType3-blc2.chpl:1: error: Formal argument name 'int' is a reserved word
